feat: add contact controller and translations

--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -13,6 +13,78 @@
         <source>default.index.devise_du_site</source>
         <target>__default.index.devise_du_site</target>
       </trans-unit>
+      <trans-unit id="k6SNMXX" resname="default.navbar.shop">
+        <source>default.navbar.shop</source>
+        <target>__default.navbar.shop</target>
+      </trans-unit>
+      <trans-unit id="UFMmw8X" resname="default.navbar.nbOfProducts">
+        <source>default.navbar.nbOfProducts</source>
+        <target>__default.navbar.nbOfProducts</target>
+      </trans-unit>
+      <trans-unit id="88T1kfJ" resname="default.navbar.contact">
+        <source>default.navbar.contact</source>
+        <target>__default.navbar.contact</target>
+      </trans-unit>
+      <trans-unit id="P8RQkAp" resname="default.navbar.connexion">
+        <source>default.navbar.connexion</source>
+        <target>__default.navbar.connexion</target>
+      </trans-unit>
+      <trans-unit id="r7KolWR" resname="default.navbar.register">
+        <source>default.navbar.register</source>
+        <target>__default.navbar.register</target>
+      </trans-unit>
+      <trans-unit id="_YFXc4c" resname="default.navbar.myAccount">
+        <source>default.navbar.myAccount</source>
+        <target>__default.navbar.myAccount</target>
+      </trans-unit>
+      <trans-unit id="WFbZwIx" resname="default.navbar.myOrders">
+        <source>default.navbar.myOrders</source>
+        <target>__default.navbar.myOrders</target>
+      </trans-unit>
+      <trans-unit id="_pGVyp_" resname="default.navbar.logout">
+        <source>default.navbar.logout</source>
+        <target>__default.navbar.logout</target>
+      </trans-unit>
+      <trans-unit id="FGtbd0P" resname="default.navbar.backOffice">
+        <source>default.navbar.backOffice</source>
+        <target>__default.navbar.backOffice</target>
+      </trans-unit>
+      <trans-unit id="s6dBTqh" resname="shop.shop.backOffice">
+        <source>shop.shop.backOffice</source>
+        <target>__shop.shop.backOffice</target>
+      </trans-unit>
+      <trans-unit id="O_IfPjR" resname="shop.shop.fruits">
+        <source>shop.shop.fruits</source>
+        <target>__shop.shop.fruits</target>
+      </trans-unit>
+      <trans-unit id="848_krf" resname="shop.shop.fruitsMotto">
+        <source>shop.shop.fruitsMotto</source>
+        <target>__shop.shop.fruitsMotto</target>
+      </trans-unit>
+      <trans-unit id="vfnWhZU" resname="shop.shop.junkFood">
+        <source>shop.shop.junkFood</source>
+        <target>__shop.shop.junkFood</target>
+      </trans-unit>
+      <trans-unit id="yQitT0v" resname="shop.shop.junkFoodMotto">
+        <source>shop.shop.junkFoodMotto</source>
+        <target>__shop.shop.junkFoodMotto</target>
+      </trans-unit>
+      <trans-unit id="IyaEmlT" resname="shop.shop.vegetables">
+        <source>shop.shop.vegetables</source>
+        <target>__shop.shop.vegetables</target>
+      </trans-unit>
+      <trans-unit id="EniaLcl" resname="shop.shop.vegetablesMotto">
+        <source>shop.shop.vegetablesMotto</source>
+        <target>__shop.shop.vegetablesMotto</target>
+      </trans-unit>
+      <trans-unit id="EH.ZUsy" resname="shop.shop.virus">
+        <source>shop.shop.virus</source>
+        <target>__shop.shop.virus</target>
+      </trans-unit>
+      <trans-unit id="Hkb58VR" resname="shop.shop.virusMotto">
+        <source>shop.shop.virusMotto</source>
+        <target>__shop.shop.virusMotto</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
