--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -31,7 +31,7 @@
       </trans-unit>
       <trans-unit id="r7KolWR" resname="default.navbar.register">
         <source>default.navbar.register</source>
-        <target>S'inscrire</target>
+        <target>Connexion/Inscription</target>
       </trans-unit>
       <trans-unit id="_YFXc4c" resname="default.navbar.myAccount">
         <source>default.navbar.myAccount</source>
