--- a/translations/messages.fr.xlf
+++ b/translations/messages.fr.xlf
@@ -87,7 +87,7 @@
       </trans-unit>
       <trans-unit id="x0Nx.uz" resname="shop.index.backOffice">
         <source>shop.index.backOffice</source>
-        <target>__shop.index.backOffice</target>
+        <target>Boutique: </target>
       </trans-unit>
       <trans-unit id="cZiMTY4" resname="Text">
         <source>Text</source>
